Have section links not make the line higher. (Avoid content jumping around.)

--- a/default.css
+++ b/default.css
@@ -98,7 +98,7 @@ a.section-link {
 	display: none;
 	font-size: 16px;
 	height: 1.4em;
-	margin: 0 .5em;
+	margin: -0.2em .5em;
 	text-align: center;
 	vertical-align: text-bottom;
 	width: 1.4em;
